--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<script>
-    fetch('http://localhost:8080/news').then(res => res.json()).then(res => console.log(res));
-</script>
 <div class="wrap">
     <header id="header">
         <div class="container">
@@ -8,9 +5,9 @@
                 <div class="col-md-11">
                     <nav id="primary-nav" class="dropdown cf">
                         <ul class="dropdown menu">
-                            <li ><a routerLink="/home/dashboard">Home</a></li>
+                            <li ><a routerLink="/home">Home</a></li>
   
-                            <li><a routerLink="/list-news">News</a></li>
+                            <li><a routerLink="/admin/dashboard">News</a></li>
   
                             <li><a routerLink="/charts/bar-chart">Chart</a></li>
                         </ul>
