--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                     <h2>Welcome</h2>
                     <h4>We have a best team to develop your imagination</h4>
                     <div class="blue-button">
-                        <a routerLink="/list-news">Show more</a>
+                        <a routerLink="/admin/dashboard">Show more</a>
                     </div> 
                 </div>
             </div>
