--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1327,3 +1327,5 @@ body {
     main > section:nth-child(even) { 
       background: #f8f8f8; 
     }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
