--- a/src/app/admin/dashboard-detail/dashboard-detail.component.html
+++ b/src/app/admin/dashboard-detail/dashboard-detail.component.html
@@ -7,16 +7,20 @@
         <input matInput [(ngModel)]="data.title_news">
     </mat-form-field>
     <mat-form-field appearance="outline" style="width: 100%;">
-        <mat-label>Media News</mat-label>
+        <mat-label>Media Name</mat-label>
         <input matInput [(ngModel)]="data.media_name">
     </mat-form-field>
-   
+    <mat-form-field appearance="outline" style="width: 100%;">
+        <mat-label>Category</mat-label>
+        <input matInput [(ngModel)]="data.category">
+    </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="picker" [(ngModel)]="data.date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>      
+    </mat-form-field> 
+         
     <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>Content Text</mat-label>
         <input matInput [(ngModel)]="data.content_text">
