--- a/src/app/admin/employee/employee.component.scss
+++ b/src/app/admin/employee/employee.component.scss
@@ -1,3 +1,21 @@
+.search-bar{
+  margin-left: 18px;
+  margin-top: 15px;
+}
+.search-bar input{
+  width: 500px;
+  height: 40px;
+  // position: absolute;
+  margin-left: 0px;
+  display: inline-flex;
+}
+.search-bar button{
+  width: 100px;
+  height: 40px;
+  // position: absolute;
+  margin-left: 10px;
+  display: inline-flex;
+}
 .uk-flex{ 
   margin-left: 18px;
 }
